Bug 481625 - Crash when pressing "Close Other" in file menu when Welcome page is open
Summary: Crash when pressing "Close Other" in file menu when Welcome page is open
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.01.95
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-02-21 12:46 UTC by Oliver Beard
Modified: 2024-02-21 15:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Backtrace from GDB (59.61 KB, text/plain)
2024-02-21 12:46 UTC, Oliver Beard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Beard 2024-02-21 12:46:03 UTC
Created attachment 165973 [details]
Backtrace from GDB

SUMMARY
When pressing File > Close Other with the welcome page open, the application (Kate/KWrite) segfaults.

The action is appropriately disabled in the context menu for tabs, but not in file menu. It also only applies to documents there, and ignores the welcome page.


STEPS TO REPRODUCE
1. Open welcome page (Help > Welcome Page) if not already open.
2. Open file menu
3. Press "Close Other" action

OBSERVED RESULT
Segfault.

EXPECTED RESULT
Does nothing, or is disabled.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.93.0 (6.0 RC2)
KDE Frameworks Version: 5.249.0
Qt Version: 6.7.0

BACKTRACE (relevant parts abriged from backtrace.txt)
#0  0x00007ffff7e651e2 in KateMainWindow::slotDocumentCloseOther (this=0x7fffd8001ff0) at /usr/src/debug/kate/kate-24.01.95/apps/lib/katemainwindow.cpp:633
#1  KateMainWindow::qt_static_metacall (_o=0x7fffd8001ff0, _c=<optimized out>, _id=<optimized out>, _a=0x7fffffffced0) at /usr/src/debug/kate/build/apps/lib/kateprivate_autogen/include/moc_katemainwindow.cpp:685
        _t = 0x7fffd8001ff0
#2  0x00007ffff63bffeb in ??? () at /usr/lib/libQt6Core.so.6
#3  0x00007ffff6f299c7 in QAction::activate(QAction::ActionEvent) () at /usr/lib/libQt6Gui.so.6
Comment 1 Waqar Ahmed 2024-02-21 13:54:28 UTC
Git commit dff05073ca5266d11ede5a8816cb66c36637f841 by Waqar Ahmed.
Committed on 21/02/2024 at 13:54.
Pushed by waqar into branch 'master'.

fix crash on close other with active widget

M  +3    -1    apps/lib/katemainwindow.cpp

https://invent.kde.org/utilities/kate/-/commit/dff05073ca5266d11ede5a8816cb66c36637f841
Comment 2 Christoph Cullmann 2024-02-21 15:24:55 UTC
Git commit 2d7b564c6c7405d93960ec4ad2b04cd9a35231dc by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 21/02/2024 at 15:24.
Pushed by cullmann into branch 'release/24.02'.

fix crash on close other with active widget


(cherry picked from commit dff05073ca5266d11ede5a8816cb66c36637f841)

M  +3    -1    apps/lib/katemainwindow.cpp

https://invent.kde.org/utilities/kate/-/commit/2d7b564c6c7405d93960ec4ad2b04cd9a35231dc