fix crash on close other with active widget

BUG: 481625


(cherry picked from commit dff05073ca5266d11ede5a8816cb66c36637f841)